--- a/cloudbuild_validate.yaml
+++ b/cloudbuild_validate.yaml
@@ -9,17 +9,17 @@ steps:
         libncursesw5-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev libffi-dev liblzma-dev  \
         zip unzip git python3-distutils python3-apt
         scripts/install_python3.sh "3.9.7"
-        scripts/run_clouddq_pr.sh
+        wget -q -O clouddq_executable.zip https://github.com/GoogleCloudPlatform/cloud-data-quality/releases/download/v"${_CLOUDDQ_RELEASE_VERSION}"/clouddq_executable_v"${_CLOUDDQ_RELEASE_VERSION}"_"${_TARGET_OS}"_python"${_TARGET_PYTHON_INTERPRETER}".zip
+        python3 clouddq_executable.zip ALL config --gcp_project_id $_GOOGLE_CLOUD_PROJECT --gcp_region_id $_CLOUDDQ_BIGQUERY_REGION --gcp_bq_dataset_id $_CLOUDDQ_BIGQUERY_DATASET --target_bigquery_summary_table $_GOOGLE_CLOUD_PROJECT.$_CLOUDDQ_BIGQUERY_DATASET.$_CLOUDDQ_BIGQUERY_TARGET_TABLE
     entrypoint: /bin/bash
-    env:
-      - 'TARGET_OS=debian_11'
-      - 'TARGET_PYTHON_INTERPRETER=3.9'
-      - 'CLOUDDQ_RELEASE_VERSION=0.5.1'
-      - 'GOOGLE_CLOUD_PROJECT=clouddq-pbalm'
-      - 'CLOUDDQ_BIGQUERY_DATASET=ecommerce'
-      - 'CLOUDDQ_BIGQUERY_REGION=europe-west6'
-      - 'CLOUDDQ_BIGQUERY_TARGET_TABLE=data_quality_staging'
-    
+substitutions:
+  _TARGET_OS: debian_11
+  _TARGET_PYTHON_INTERPRETER: '3.9'
+  _CLOUDDQ_RELEASE_VERSION: '0.5.1'
+  _GOOGLE_CLOUD_PROJECT: clouddq-pbalm
+  _CLOUDDQ_BIGQUERY_DATASET: ecommerce
+  _CLOUDDQ_BIGQUERY_REGION: europe-west6
+  _CLOUDDQ_BIGQUERY_TARGET_TABLE: data_quality_staging
 timeout: 600s
 options:
   machineType: 'E2_HIGHCPU_8'
